--- a/style.css
+++ b/style.css
@@ -27,7 +27,12 @@ body {
 	font-weight: 600;
 	/*width: 1400px;*/
 	background-size: auto;
-
+	background-position: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 35vh;
 }
 
 img {
@@ -55,7 +60,7 @@ h2 {
 }
 
 .content-wrap {
-	/*width: 1800px;*/
+	width: 1200px;
 	margin: 0 auto;
 	padding: 20px 0;
 }
