--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h2 {
   margin: 10px;
 }
 h1 {
-  font-size: 80px;
+  font-size: 65px;
   line-height: 1;
   padding: 30px 0 20px 0;
 }
@@ -74,6 +74,10 @@ h2 {
   text-align: center;
 }
 
+ul {
+  padding-inline-start: 3px;
+}
+
 ul li {
   list-style-type: none;
   display: inline;
@@ -84,7 +88,7 @@ ul li {
 ----------------------------*/
 .profile {
   background-color: #d6d84f;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 /* Projects
@@ -129,10 +133,10 @@ h3 {
   background-color: #b9e28c;
 }
 
-.job-item {
+/*.job-item {
   display: grid;
   grid-template-columns: 1fr 2fr;
-}
+}*/
 
 /* Education
 ----------------------------*/
@@ -144,29 +148,63 @@ h3 {
 
 .education p {
   width: 60%;
+  color: #310aa5;
 }
+
 /* Contact Info
 ----------------------------*/
 footer {
   background-color: #9eadc8;
   color: #5b507a;
-  text-align: center;
 }
 footer a {
   color: #5b507a;
   background: #b9e28c;
   text-decoration: none;
 }
-.contact-list {
+/*.contact-list {
   list-style-type: none;
   padding: 0;
   display: flex;
   justify-content: center;
-}
+}*/
 .contact-list a {
-  padding: 15px;
+  padding: 5px;
   display: inline-block;
+  border: 2px solid #b9e28c;
+  border-radius: 12px;
 }
 /*a:visited {
 	color: green;
 }*/
+
+/* Responsive
+----------------------------*/
+@media screen and (min-width: 650px) {
+  .profile h1,
+  .profile h2,
+  .profile h3,
+  .profile ul,
+  footer {
+    text-align: center;
+  }
+
+  .job-item {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .contact-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }
+
+  .contact-list a {
+    padding: 15px;
+    display: inline-block;
+    border: 2px solid #b9e28c;
+    border-radius: 12px;
+  }
+}
