--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a:hover {
 }
 h1,
 h2 {
-  font-family: "Caveat", cursive; /*may require link*/
+  font-family: "Montserrat", cursive; /*may require link*/
   font-weight: 400;
   margin: 10px;
 }
