--- a/style.css
+++ b/style.css
@@ -38,6 +38,191 @@ body {
   /*height: 35vh;*/
 }
 
+i{
+  font-family: fontawesome;
+  font-style: normal;
+}
+ul{
+    margin: 0;
+}
+/*navigation bar*/
+nav {
+    background: white;
+    font-size: 0.8em;
+}
+nav li {
+    padding: 0 1em;
+}
+nav a {
+    color: black;
+    text-decoration: none;
+  }
+.menu,
+  .submenu {
+    list-style-type: none;
+}
+/*
+.logo {
+    font-size: 20px;
+    padding: 7.5px 10px 7.5px 0;
+}*/
+.item.button {
+    padding: 9px 5px;
+  }
+  .item:not(.button) a:hover,
+  .item a:hover::after {
+    color: rgb(156, 156, 156);
+  }
+.sticky{
+    /*position:fixed;*/
+    width:100%;
+    top:0;
+}
+/* Mobile menu */
+.menu {
+    padding-left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  /*adjusts active page text color to blue*/
+  .active-page{
+    color: #678b99;
+  }
+  .menu li a {
+    display: block;
+    padding: 15px 5px;
+  }
+  .menu li.subitem a {
+    padding: 15px;
+  }
+  .toggle {
+    order: 1;
+    font-size: 20px;
+  }
+  .item.button {
+    order: 2;
+  }
+  .item {
+    order: 3;
+    width: 100%;
+    text-align: center;
+    display: none;
+  }
+  .active .item {
+    display: block;
+  }
+  .button.secondary {
+    /* divider between buttons and menu links */
+    border-bottom: 1px #444 solid;
+  }
+  /* Submenu up from mobile screens */
+  .submenu {
+    display: none;
+  }
+  .submenu-active .submenu {
+    display: block;
+  }
+  .has-submenu i {
+    font-size: 12px;
+  }
+  .has-submenu > a::after {
+    font-size: 12px;
+    line-height: 16px;
+    color: white;
+    padding-left: 5px;
+  }
+  .subitem a {
+    padding: 10px 15px;
+  }
+  .submenu-active {
+    background-color: #46697d;
+    border-radius: 3px;
+  }
+  /* Tablet menu */
+  @media all and (min-width: 700px) {
+    .menu {
+      justify-content: center;
+      align-items: center;
+    }
+    .logo {
+      flex: 1;
+    }
+    .item.button {
+      width: auto;
+      order: 1;
+      display: block;
+    }
+    .toggle {
+      flex: 1;
+      text-align: right;
+      order: 2;
+    }
+    /* Button up from tablet screen */
+    .menu li.button a {
+      padding: 10px 15px;
+      margin: 5px 0;
+    }
+    .button a {
+      background: #46697d;
+      border: 1px #46697d solid;
+    }
+    .button.secondary {
+      border: 0;
+    }
+    .button.secondary a {
+      background: transparent;
+      border: 1px #46697d solid;
+    }
+    .button a:hover {
+      text-decoration: none;
+    }
+    .button:not(.secondary) a:hover {
+      background:  rgb(70, 105, 125, 0.8);
+      border-color:  #46697d;
+    }
+  }
+  /* Desktop menu */
+  @media all and (min-width: 960px) {
+    .menu {
+      align-items: center;
+      flex-wrap: nowrap;
+      background: none;
+    }
+    /*
+    .logo {
+        display: none;
+      order: 0;
+    }*/
+    .item {
+      order: 1;
+      position: relative;
+      display: block;
+      width: auto;
+    }
+    .button {
+      order: 2;
+    }
+    .submenu-active .submenu {
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 68px;
+      background: #678b99;
+    }
+    .toggle {
+      display: none;
+    }
+    .submenu-active {
+      border-radius: 0;
+    }
+  }
+
+
+/*XXXXXXX*/ 
+
+
 img {
   width: 260px;
   /*padding: 7px;*/
