--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ body {
 }
 
 .box {
-    height: 1px;
+    height: 2px;
     width: 30px;
     /*animation: move cubic-bezier(.62,.15,.4,.9) 2s infinite alternate both;*/
     animation: move 4s ease-in-out 1s infinite alternate both;
@@ -298,7 +298,7 @@ nav a {
 
 
 img {
-  width: 75%;
+  width: 85%;
   /*padding: 7px;*/
   vertical-align: center;
   display: block;
@@ -307,11 +307,17 @@ img {
   background-color: blue;
   height: auto;
 }
+
+.content-wrap:hover .img {
+  opacity: 0.3;
+}
+
 a {
   color: #d6d84f;
 }
 a:hover {
   text-decoration: none;
+  opacity: 0.6;
 }
 h1,
 h2 {
@@ -421,4 +427,39 @@ footer a {
     border: 2px solid #b9e28c;
     border-radius: 12px;
   }
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.content-wrap:hover .image {
+  opacity: 0.3;
+}
+
+.content-wrap:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
 }
